fixed layout issue on bra size question

--- a/app/assets/stylesheets/partials/_quiz.css.scss
+++ b/app/assets/stylesheets/partials/_quiz.css.scss
@@ -1024,8 +1024,8 @@
       }
       &.smaller {
         font-size: 18px;
-        line-height: 22.5px;
-        width: 164px;
+        line-height: 34.5px;
+        width: 204px;
       }
       &.active {
         background: #b7f0e5;
